==> EtcFly/myEmbeddedNote/stm32/3、实用工具包/文件系统/SPIFFS/测试DEMO/Project/Src/bsp_uart.c <==
#include "stm32f1xx_hal.h"
#include "bsp_uart.h"
	#define RS485_DIR_GPIO_CLK              RCC_APB2Periph_GPIOB
	#define	RS485_DIR_GPIO_PORT				GPIOB
	#define RS485_DIR_GPIO_PIN				GPIO_Pin_12
	#define RS485_TX_EN()					GPIO_SetBits(RS485_DIR_GPIO_PORT,RS485_DIR_GPIO_PIN)
	#define RS485_RX_EN()					GPIO_ResetBits(RS485_DIR_GPIO_PORT,RS485_DIR_GPIO_PIN)

static void UartHardInit(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	
#if UART1_FIFO_EN == 1		/* 串口1 TX = PA9   RX = PA10 或 TX = PB6   RX = PB7*/

	/* 第1步： 配置GPIO */
	#if 1	
		/* 打开 UART 时钟 */
		__HAL_RCC_USART1_CLK_ENABLE();
		
		#if 0 //choice PA9/PA10
		/* Configure USART1 Tx (PA.09) as alternate function push-pull */
		/**USART1 GPIO Configuration    
		PA9     ------> USART1_TX
		PA10     ------> USART1_RX 
		*/
		/* 打开 GPIO 时钟 */
			__HAL_RCC_GPIOA_CLK_ENABLE();
			GPIO_InitStructure.Pin = GPIO_PIN_9|GPIO_PIN_10;	
		#else
			__HAL_RCC_GPIOB_CLK_ENABLE();
			GPIO_InitStructure.Pin = GPIO_PIN_6|GPIO_PIN_7;	
		#endif
		
		GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
		GPIO_InitStructure.Pull = GPIO_PULLUP;
		GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
		HAL_GPIO_Init(GPIOB, &GPIO_InitStructure);
		
	#endif

	/* 第2步： 配置串口硬件参数 */
	  husart1.Instance = USART1;
	  husart1.Init.BaudRate = UART1_BAUD;
	  husart1.Init.WordLength = UART_WORDLENGTH_8B;
	  husart1.Init.StopBits = UART_STOPBITS_1;
	  husart1.Init.Parity = UART_PARITY_NONE;
	  husart1.Init.Mode = UART_MODE_TX_RX;
	  husart1.Init.HwFlowCtl = UART_HWCONTROL_NONE;
	  husart1.Init.OverSampling = UART_OVERSAMPLING_16;
	  if (HAL_UART_Init(&husart1) != HAL_OK)
	  {
		 return ;
	  }
	  
	  __HAL_UART_ENABLE_IT(&husart1, UART_IT_RXNE); 
	  while (__HAL_UART_GET_FLAG(&husart1, UART_FLAG_TC) != RESET)
	  {
		__HAL_UART_CLEAR_FLAG(&husart1, UART_FLAG_TC);
	  }

#endif

#if UART2_FIFO_EN == 1		/* 串口2 TX = PA2   RX = PA3 或 TX = PD5   RX = PD6*/

	GPIO_InitTypeDef GPIO_InitStruct;
	HAL_UART_DeInit(&husart2);
	/* 第1步： 配置GPIO */

	/* 打开 GPIO 时钟 */
	__HAL_RCC_GPIOA_CLK_ENABLE();

	/* 打开 UART 时钟 */
	__HAL_RCC_USART2_CLK_ENABLE();

    /**USART2 GPIO Configuration    
    PA2     ------> USART2_TX
    PA3     ------> USART2_RX 
    */
    GPIO_InitStruct.Pin = GPIO_PIN_2|GPIO_PIN_3;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
    GPIO_InitStruct.Alternate = GPIO_AF7_USART2;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

	husart2.Instance = USART2;
	husart2.Init.BaudRate = UART2_BAUD;
	husart2.Init.WordLength = UART_WORDLENGTH_8B;
	husart2.Init.StopBits = UART_STOPBITS_1;
	husart2.Init.Parity = UART_PARITY_NONE;
	husart2.Init.Mode = UART_MODE_TX_RX;
	husart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
	husart2.Init.OverSampling = UART_OVERSAMPLING_16;
	husart2.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
	husart2.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;
	if (HAL_UART_Init(&husart2) != HAL_OK)
	{

	}
	__HAL_UART_ENABLE_IT(&husart2, UART_IT_RXNE);
	while (__HAL_UART_GET_FLAG(&husart2, UART_FLAG_TC) != RESET)
	{
	__HAL_UART_CLEAR_IT(&husart2, UART_CLEAR_TCF);
	}
#endif
}

static void UartNVICConfig(void)  
{
	/* Configure the NVIC Preemption Priority Bits */
//	NVIC_PriorityGroupConfig(NVIC_PriorityGroup_2);
	
	#if UART1_FIFO_EN == 1		 
	/* USART1 interrupt Init */
	HAL_NVIC_SetPriority(USART1_IRQn, 1, 1);
	HAL_NVIC_EnableIRQ(USART1_IRQn);
	#endif
	
	#if UART2_FIFO_EN == 1		 
	/* 使能串口1中断 */
    HAL_NVIC_SetPriority(USART2_IRQn, 1, 2);
    HAL_NVIC_EnableIRQ(USART2_IRQn);
	#endif
	
	#if UART3_FIFO_EN == 1		 
	/* 使能串口1中断 */
	NVIC_InitStructure.NVIC_IRQChannel = USART3_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0; 
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);	
	#endif
	 
	#if UART4_FIFO_EN == 1		 
	/* 使能串口4中断 */
	NVIC_InitStructure.NVIC_IRQChannel = UART4_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0; 
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);	
	#endif 
}

static uint8_t UartPutChar(UART_T *_pUart, uint8_t _ucDat)
{
	__HAL_UART_DISABLE_IT(_pUart->uart, UART_IT_TC);				//禁止串口发送结束中断
	//发送缓冲满，后面发送的数据忽略掉
	if(_pUart->usTxCount==_pUart->usTxBufSize)
	{
		__HAL_UART_ENABLE_IT(_pUart->uart, UART_IT_TC);			//打开串口发送结束中断  
		return 1;
	}	
	
	_pUart->pTxBuf[_pUart->usTxWrite]=_ucDat;		//向发送缓存中写数据
	_pUart->usTxWrite++;
	if(_pUart->usTxWrite>=_pUart->usTxBufSize)
	_pUart->usTxWrite=0;	
	  
	_pUart->usTxCount++; 
	if(_pUart->usTxCount==1)
	{
		if(!(_pUart->usTxWrite))
		{
			_pUart->usTxRead=_pUart->usTxBufSize-1;
		}	
		else
		_pUart->usTxRead=_pUart->usTxWrite-1;
		
		HAL_UART_Transmit(_pUart->uart, (uint8_t *)&_pUart->pTxBuf[_pUart->usTxRead], 1, 100);		   
		_pUart->usTxRead=_pUart->usTxWrite;
	}   
	
	__HAL_UART_ENABLE_IT(_pUart->uart, UART_IT_TC);			//打开串口发送结束中断   
	return 0;
}

static uint8_t UartGetChar(UART_T *_pUart, uint8_t *_pByte)
{  
	__HAL_UART_DISABLE_IT(_pUart->uart, UART_IT_RXNE);	
	if(_pUart->usRxCount)		//表示接收缓冲中有数据
	{ 
		_pUart->usRxCount--;
		
		*_pByte=_pUart->pRxBuf[_pUart->usRxRead];
		 
		_pUart->usRxRead++;
		if(_pUart->usRxRead>=_pUart->usRxBufSize)
		_pUart->usRxRead=0;	
		  
		__HAL_UART_ENABLE_IT(_pUart->uart, UART_IT_RXNE);	
		return 1;
	}	
	else
	{ 
		__HAL_UART_ENABLE_IT(_pUart->uart, UART_IT_RXNE);	
		return 0;
	} 
}

static void UartIRQ(UART_T *_pUart)
{	
//	if(__HAL_UART_GET_FLAG(_pUart->uart, UART_FLAG_RXNE) != RESET)	//发送接收中断
//	{
//		//在缓冲已满的状态下，忽略新收到的数据
//		if (_pUart->usRxCount < _pUart->usRxBufSize)
//		{
//			/* 从串口接收数据寄存器读取数据存放到接收FIFO */
//			if (HAL_UART_Receive(_pUart->uart, (uint8_t *)&_pUart->pRxBuf[_pUart->usRxWrite], 1, 100) == HAL_OK) {
//				_pUart->usRxCount++;
//				_pUart->usRxWrite++;
//				if(_pUart->usRxWrite>=_pUart->usRxBufSize)
//				_pUart->usRxWrite=0; 
//			}
//		} 
//		else
//		{
//			uint8_t data;
//			HAL_UART_Receive(_pUart->uart, &data, 1, 100);
//		}	
//	}	 
//	if (__HAL_UART_GET_FLAG(_pUart->uart, UART_FLAG_TC) != RESET)	//发送完成中断
//	{
//		_pUart->usTxCount--;
//		if(_pUart->usTxCount)		//如果还有发送的数据
//		{
//			if (HAL_UART_Transmit(_pUart->uart, (uint8_t *)&_pUart->pTxBuf[_pUart->usTxRead], 1, 100) == HAL_OK) {
//				_pUart->usTxRead++;
//				if(_pUart->usTxRead>=_pUart->usTxBufSize)
//				_pUart->usTxRead=0; 	
//			}
//		}	
//		else
//		{
//			__HAL_UART_CLEAR_FLAG(_pUart->uart,UART_FLAG_TC);			 //清除发送完成标志
//		}
//	} 

	if(__HAL_UART_GET_FLAG(_pUart->uart, UART_FLAG_RXNE) != RESET)	//发送接收中断
	{
		//在缓冲已满的状态下，忽略新收到的数据
		if (_pUart->usRxCount < _pUart->usRxBufSize)
		{
			/* 从串口接收数据寄存器读取数据存放到接收FIFO */
			if (HAL_UART_Receive(_pUart->uart, (uint8_t *)&_pUart->pRxBuf[_pUart->usRxWrite], 1, 100) == HAL_OK) {
				_pUart->usRxCount++;
				_pUart->usRxWrite++;
				if(_pUart->usRxWrite>=_pUart->usRxBufSize)
				_pUart->usRxWrite=0; 
			}
			else
			{
				__HAL_UART_CLEAR_FLAG(_pUart->uart, UART_FLAG_RXNE);
			}
		} 
		else
		{
			uint8_t data;
			if (HAL_UART_Receive(_pUart->uart, &data, 1, 100) != HAL_OK)
			{
				__HAL_UART_CLEAR_FLAG(_pUart->uart, UART_FLAG_RXNE);
			}
		}
		return ;
	}	 
	if (__HAL_UART_GET_FLAG(_pUart->uart, UART_FLAG_TC) != RESET)	//发送完成中断
	{
		_pUart->usTxCount--;
		if(_pUart->usTxCount)		//如果还有发送的数据
		{
			if (HAL_UART_Transmit(_pUart->uart, (uint8_t *)&_pUart->pTxBuf[_pUart->usTxRead], 1, 100) == HAL_OK) {
				_pUart->usTxRead++;
				if(_pUart->usTxRead>=_pUart->usTxBufSize)
				_pUart->usTxRead=0; 	
			}
			else
			{
				__HAL_UART_CLEAR_FLAG(_pUart->uart,UART_FLAG_TC);			 //清除发送完成标志
			}
		}	
		else
		{
			__HAL_UART_CLEAR_FLAG(_pUart->uart,UART_FLAG_TC);			 //清除发送完成标志
		}
		return ;
	} 
//	__HAL_UART_CLEAR_FLAG(_pUart->uart, UART_CLEAR_PEF | UART_CLEAR_FEF | UART_CLEAR_NEF  \
//	                                  | UART_CLEAR_OREF | UART_CLEAR_IDLEF |  UART_CLEAR_TCF
//                                      | UART_CLEAR_LBDF	| UART_CLEAR_CTSF | UART_CLEAR_CMF | UART_CLEAR_WUF);
}
