==> lyplcr/DTS-2500_HMI0030_BOOTLOADER/DTS-2500_HMI0030_BOOT/BSP/src/bsp_uart.c <==
#include "bsp.h"
	#define RS485_DIR_GPIO_CLK              RCC_APB2Periph_GPIOB
	#define	RS485_DIR_GPIO_PORT				GPIOB
	#define RS485_DIR_GPIO_PIN				GPIO_Pin_12
	#define RS485_TX_EN()					GPIO_SetBits(RS485_DIR_GPIO_PORT,RS485_DIR_GPIO_PIN)
	#define RS485_RX_EN()					GPIO_ResetBits(RS485_DIR_GPIO_PORT,RS485_DIR_GPIO_PIN)

static void UartHardInit(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	USART_InitTypeDef USART_InitStructure;
	
#if UART1_FIFO_EN == 1		/* 串口1 TX = PA9   RX = PA10 或 TX = PB6   RX = PB7*/

	USART_DeInit(USART1);
	
	/* 第1步： 配置GPIO */
	#if 1	/* TX = PA9   RX = PA10 */
		/* 打开 GPIO 时钟 */
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA,ENABLE);
		
		/* 打开 UART 时钟 */
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1,ENABLE);
	
		/* 配置引脚复用映射 */
		GPIO_PinAFConfig(GPIOA,GPIO_PinSource9,GPIO_AF_USART1); 
		GPIO_PinAFConfig(GPIOA,GPIO_PinSource10,GPIO_AF_USART1); 
		
		/* 配置IO */
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9 | GPIO_Pin_10;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
		GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
		GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
		GPIO_Init(GPIOA, &GPIO_InitStructure); 

	#else	/* TX = PB6   RX = PB7  */
		/* 打开 GPIO 时钟 */
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB|RCC_APB2Periph_AFIO, ENABLE);
		/* 打开 UART 时钟 */
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);
		 
		GPIO_PinRemapConfig(GPIO_Remap_USART1,ENABLE);		//选用USART1的Remap引脚

		/* Configure USART1 Tx (PB.06) as alternate function push-pull */
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
		GPIO_Init(GPIOB, &GPIO_InitStructure); 
		/* Configure USART1 Rx (PB.07) as input floating */
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
		GPIO_Init(GPIOB, &GPIO_InitStructure); 
	#endif

	/* 第2步： 配置串口硬件参数 */
	USART_InitStructure.USART_BaudRate = UART1_BAUD;	/* 波特率 */
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	USART_InitStructure.USART_StopBits = USART_StopBits_1;
	USART_InitStructure.USART_Parity = USART_Parity_No ;
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
	USART_Init(USART1, &USART_InitStructure);
	  
	USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);	/* 使能接收中断 */ 
	/*
		USART_ITConfig(USART1, USART_IT_TXE, ENABLE);
		注意: 不要在此处打开发送中断
		发送中断使能在SendUart()函数打开
	*/
	USART_Cmd(USART1, ENABLE);		/* 使能串口 */

	/* CPU的小缺陷：串口配置好，如果直接Send，则第1个字节发送不出去
		如下语句解决第1个字节无法正确发送出去的问题 */
	USART_ClearFlag(USART1, USART_FLAG_TC);     /* 清发送完成标志，Transmission Complete flag */ 
	while(USART_GetFlagStatus(USART1,USART_FLAG_TC)==RESET)
	{
		;
	}
	USART_ClearFlag(USART1, USART_FLAG_TC);
#endif

#if UART6_FIFO_EN == 1		/* 串口1 TX = PC6   RX = PC7 或 */

	USART_DeInit(USART6);
	
	/* 第1步： 配置GPIO */
	#if 1	/* 串口1 TX = PC6   RX = PC7 */
		/* 打开 GPIO 时钟 */
		RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOC,ENABLE);
		
		/* 打开 UART 时钟 */
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART6,ENABLE);
	
		/* 配置引脚复用映射 */
		GPIO_PinAFConfig(GPIOC,GPIO_PinSource6,GPIO_AF_USART6); 
		GPIO_PinAFConfig(GPIOC,GPIO_PinSource7,GPIO_AF_USART6); 
		
		/* 配置IO */
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6 | GPIO_Pin_7;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
		GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
		GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
		GPIO_Init(GPIOC, &GPIO_InitStructure); 

	#else	/* TX = PB6   RX = PB7  */
		/* 打开 GPIO 时钟 */
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB|RCC_APB2Periph_AFIO, ENABLE);
		/* 打开 UART 时钟 */
		RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);
		 
		GPIO_PinRemapConfig(GPIO_Remap_USART1,ENABLE);		//选用USART1的Remap引脚

		/* Configure USART1 Tx (PB.06) as alternate function push-pull */
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
		GPIO_Init(GPIOB, &GPIO_InitStructure); 
		/* Configure USART1 Rx (PB.07) as input floating */
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
		GPIO_Init(GPIOB, &GPIO_InitStructure); 
	#endif

	/* 第2步： 配置串口硬件参数 */
	USART_InitStructure.USART_BaudRate = UART6_BAUD;	/* 波特率 */
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	USART_InitStructure.USART_StopBits = USART_StopBits_1;
	USART_InitStructure.USART_Parity = USART_Parity_No ;
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
	USART_Init(USART6, &USART_InitStructure);
	  
	USART_ITConfig(USART6, USART_IT_RXNE, ENABLE);	/* 使能接收中断 */ 
	/*
		USART_ITConfig(USART1, USART_IT_TXE, ENABLE);
		注意: 不要在此处打开发送中断
		发送中断使能在SendUart()函数打开
	*/
	USART_Cmd(USART6, ENABLE);		/* 使能串口 */

	/* CPU的小缺陷：串口配置好，如果直接Send，则第1个字节发送不出去
		如下语句解决第1个字节无法正确发送出去的问题 */
	USART_ClearFlag(USART6, USART_FLAG_TC);     /* 清发送完成标志，Transmission Complete flag */ 
	while(USART_GetFlagStatus(USART6,USART_FLAG_TC)==RESET)
	{
		;
	}
	USART_ClearFlag(USART6, USART_FLAG_TC);
#endif	
	
}

static void UartNVICConfig(void)  
{
	NVIC_InitTypeDef NVIC_InitStructure;

	/* Configure the NVIC Preemption Priority Bits */
//	NVIC_PriorityGroupConfig(NVIC_PriorityGroup_2);
	
	#if UART1_FIFO_EN == 1		 
	/* 使能串口1中断 */
	NVIC_InitStructure.NVIC_IRQChannel = USART1_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0; 
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);	
	#endif
	
	#if UART2_FIFO_EN == 1		 
	/* 使能串口1中断 */
	NVIC_InitStructure.NVIC_IRQChannel = USART2_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0; 
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);	
	#endif
	
	#if UART3_FIFO_EN == 1		 
	/* 使能串口1中断 */
	NVIC_InitStructure.NVIC_IRQChannel = USART3_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0; 
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);	
	#endif
	 
	#if UART4_FIFO_EN == 1		 
	/* 使能串口4中断 */
	NVIC_InitStructure.NVIC_IRQChannel = USART4_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0; 
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);	
	#endif 
	
	#if UART6_FIFO_EN == 1		 
	/* 使能串口6中断 */
	NVIC_InitStructure.NVIC_IRQChannel = USART6_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0; 
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);	
	#endif 
}

static uint8_t UartPutChar(UART_T *_pUart, uint8_t _ucDat)
{
	USART_ITConfig(_pUart->uart, USART_IT_TC,DISABLE);				//禁止串口发送结束中断
	//发送缓冲满，后面发送的数据忽略掉
	if(_pUart->usTxCount==_pUart->usTxBufSize)
	{
		USART_ITConfig(_pUart->uart, USART_IT_TC,ENABLE);			//打开串口发送结束中断  
		return 1;
	}	
	
	_pUart->pTxBuf[_pUart->usTxWrite]=_ucDat;		//向发送缓存中写数据
	_pUart->usTxWrite++;
	if(_pUart->usTxWrite>=_pUart->usTxBufSize)
	_pUart->usTxWrite=0;	
	  
	_pUart->usTxCount++; 
	if(_pUart->usTxCount==1)
	{
		if(!(_pUart->usTxWrite))
		{
			_pUart->usTxRead=_pUart->usTxBufSize-1;
		}	
		else
		_pUart->usTxRead=_pUart->usTxWrite-1;
		
		USART_SendData(_pUart->uart, _pUart->pTxBuf[_pUart->usTxRead]);		   
		_pUart->usTxRead=_pUart->usTxWrite;
	}   
	
	USART_ITConfig(_pUart->uart, USART_IT_TC,ENABLE);			//打开串口发送结束中断   
	return 0;
}

static uint8_t UartGetChar(UART_T *_pUart, uint8_t *_pByte)
{  
	USART_ITConfig(_pUart->uart, USART_IT_RXNE, DISABLE);  
	if(_pUart->usRxCount)		//表示接收缓冲中有数据
	{ 
		_pUart->usRxCount--;
		
		*_pByte=_pUart->pRxBuf[_pUart->usRxRead];
		 
		_pUart->usRxRead++;
		if(_pUart->usRxRead>=_pUart->usRxBufSize)
		_pUart->usRxRead=0;	
		  
		USART_ITConfig(_pUart->uart, USART_IT_RXNE, ENABLE);
		return 1;
	}	
	else
	{ 
		USART_ITConfig(_pUart->uart, USART_IT_RXNE, ENABLE);
		return 0;
	} 
}

static void UartIRQ(UART_T *_pUart)
{	
	if(USART_GetITStatus(_pUart->uart, USART_IT_RXNE) != RESET)	//发送接收中断
	{
		//在缓冲已满的状态下，忽略新收到的数据
		if (_pUart->usRxCount < _pUart->usRxBufSize)
		{
			_pUart->usRxCount++;
			/* 从串口接收数据寄存器读取数据存放到接收FIFO */
			_pUart->pRxBuf[_pUart->usRxWrite]=USART_ReceiveData(_pUart->uart);
			_pUart->usRxWrite++;
			if(_pUart->usRxWrite>=_pUart->usRxBufSize)
			_pUart->usRxWrite=0; 
		} 
		else
		{
			USART_ReceiveData(_pUart->uart);
		}	
	}	 
	if (USART_GetITStatus(_pUart->uart, USART_IT_TC) != RESET)	//发送完成中断
	{
		_pUart->usTxCount--;
		if(_pUart->usTxCount)		//如果还有发送的数据
		{
			USART_SendData(_pUart->uart,_pUart->pTxBuf[_pUart->usTxRead]);     
			_pUart->usTxRead++;
			if(_pUart->usTxRead>=_pUart->usTxBufSize)
			_pUart->usTxRead=0; 	
		}	
		else
		{
			USART_ClearFlag(_pUart->uart,USART_FLAG_TC);			 //清除发送完成标志
		}
	} 
}
